--- a/package.json
+++ b/package.json
@@ -15,26 +15,29 @@
     "swatches:gen": "node scripts/generate-swatches.mjs --json docs/swatches/palette.sample.json --out docs/swatches --size 14 --adoc docs/swatches/generated.adoc"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@hookform/resolvers": "^5.2.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.16.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.87.4",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "bcryptjs": "^2.4.3",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.9.12",
     "react": "19.1.0",
+    "react-big-calendar": "^1.14.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
-    "react-big-calendar": "^1.14.0",
-    "nodemailer": "^6.9.12",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
-    "zod": "^4.1.8",
-    "@prisma/client": "^6.16.1"
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
