--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - /app/node_modules
       # Omit .next bind to ensure full rebuilds pick up server code changes
     command: >-
-      sh -c "pnpm -s prisma:generate && pnpm -s exec prisma db push && pnpm -s db:seed || true && pnpm -s dev --turbo -p 3000 -H 0.0.0.0"
+      sh -c "pnpm -s prisma:generate && pnpm -s prisma migrate deploy && pnpm -s db:seed || true && pnpm -s dev --turbo -p 3000 -H 0.0.0.0"
 
   realtime:
     build: ./realtime-server
