--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "test": "vitest run",
     "prisma:generate": "prisma generate",
     "db:migrate": "prisma migrate dev --name init",
-    "db:seed": "prisma db seed",
+    "db:seed": "node prisma/seed.mjs",
     "swatches:gen": "node scripts/generate-swatches.mjs --json docs/swatches/palette.sample.json --out docs/swatches --size 14 --adoc docs/swatches/generated.adoc"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.16.1",
+    "@prisma/client": "6.16.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.87.4",
     "bcryptjs": "^2.4.3",
@@ -47,13 +47,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "prisma": "^6.16.1",
+    "prisma": "6.16.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5",
     "vitest": "^2.1.4"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.mjs"
   }
 }
