--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.9.12",
+    "quill": "1.3.7",
     "react": "19.1.0",
     "react-big-calendar": "^1.14.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-quill": "2.0.0",
     "sanitize-html": "^2.13.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
