--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "6.16.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
     "@react-email/components": "^0.5.3",
     "@react-email/render": "^1.2.3",
     "@sendgrid/mail": "^8.1.6",
@@ -51,6 +52,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.16.0",
