--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+**/node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -26,6 +27,9 @@
 # misc
 .DS_Store
 *.pem
+
+# runtime caches
+v8-compile-cache-*
 
 # debug
 npm-debug.log*
