--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-# Dev Dockerfile for Next.js app
+# Development Dockerfile bundling the Next.js app and realtime server
 FROM node:20-slim
 
 ARG NODE_ENV=development
@@ -6,7 +6,12 @@ ARG NODE_ENV=development
 ENV PNPM_HOME=/root/.local/share/pnpm \
     PATH=/root/.local/share/pnpm:$PATH \
     NEXT_TELEMETRY_DISABLED=1 \
-    NODE_ENV=${NODE_ENV}
+    NODE_ENV=${NODE_ENV} \
+    REALTIME_BASE_PATH=/realtime \
+    NEXT_PUBLIC_REALTIME_URL=/realtime \
+    NEXT_PUBLIC_REALTIME_PATH=/realtime/socket.io \
+    REALTIME_SERVER_EVENT_PATH=/realtime/events \
+    TURBOPACK=1
 
 RUN apt-get update -y && apt-get install -y openssl && rm -rf /var/lib/apt/lists/* \
     && corepack enable
@@ -15,8 +20,6 @@ WORKDIR /app
 
 # Install deps first (better caching)
 COPY package.json pnpm-lock.yaml ./
-# In dev images, avoid frozen lockfile to allow quick dep edits. Skip Prisma
-# postinstall generate until schema is available.
 RUN SKIP_PRISMA_POSTINSTALL=1 PRISMA_SKIP_POSTINSTALL_GENERATE=1 pnpm install --no-frozen-lockfile
 
 # Copy the rest
@@ -27,4 +30,4 @@ RUN pnpm prisma:generate
 
 EXPOSE 3000
 
-CMD ["pnpm", "dev", "--turbo", "-p", "3000", "-H", "0.0.0.0"]
+CMD ["sh", "-c", "pnpm -s prisma:generate && pnpm -s prisma migrate deploy && (pnpm -s db:seed || true) && pnpm -s start:combined"]
