--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: theater
+      POSTGRES_DB: theater_dev
     ports:
       - "5432:5432"
     volumes:
@@ -20,11 +20,13 @@ services:
     image: axllent/mailpit:latest
     restart: unless-stopped
     ports:
-      - "8025:8025" # UI
-      - "1025:1025" # SMTP
+      - "8025:8025"
+      - "1025:1025"
 
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     restart: unless-stopped
     depends_on:
       db:
@@ -33,34 +35,22 @@ services:
       NODE_ENV: development
       NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
       AUTH_SECRET: dev-secret-change-me
-      AUTH_DEV_NO_DB: "0" # DB-backed sessions (NextAuth Prisma Adapter)
-      NEXT_PUBLIC_AUTH_DEV_NO_DB: "0" # mirror to client to avoid hydration mismatch
-      NEXT_PUBLIC_REALTIME_URL: ${NEXT_PUBLIC_REALTIME_URL:-http://localhost:4001}
-      REALTIME_SERVER_URL: http://realtime:4001
-      REALTIME_AUTH_TOKEN: dev-realtime-secret
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/theater?schema=public
+      AUTH_DEV_NO_DB: "0"
+      NEXT_PUBLIC_AUTH_DEV_NO_DB: "0"
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/theater_dev?schema=public
       EMAIL_SERVER: smtp://mailpit:1025
       EMAIL_FROM: noreply@example.com
-      # EMAIL_SERVER / EMAIL_FROM not required when AUTH_DEV_NO_DB=1
+      REALTIME_BASE_PATH: /realtime
+      REALTIME_AUTH_TOKEN: dev-realtime-secret
+      REALTIME_HANDSHAKE_SECRET: dev-realtime-secret
+      NEXT_PUBLIC_REALTIME_URL: ${NEXT_PUBLIC_REALTIME_URL:-http://localhost:3000/realtime}
     ports:
       - "3000:3000"
     volumes:
       - .:/app
       - /app/node_modules
-      # Omit .next bind to ensure full rebuilds pick up server code changes
     command: >-
-      sh -c "pnpm -s prisma:generate && pnpm -s prisma migrate deploy && (pnpm -s db:seed || true) && pnpm -s dev --turbo -p 3000 -H 0.0.0.0"
-
-  realtime:
-    build: ./realtime-server
-    restart: unless-stopped
-    environment:
-      PORT: 4001
-      SOCKET_PATH: /socket.io
-      CORS_ORIGIN: ${NEXTAUTH_URL:-http://localhost:3000}
-      REALTIME_AUTH_TOKEN: dev-realtime-secret
-    ports:
-      - "4001:4001"
+      sh -c "pnpm -s prisma:generate && pnpm -s prisma migrate deploy && (pnpm -s db:seed || true) && pnpm -s start:combined"
 
 volumes:
   pgdata:
