--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
-    "zod": "^4.1.8"
+    "zod": "^4.1.8",
+    "prisma": "6.16.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -61,7 +62,6 @@
     "@types/sanitize-html": "^2.16.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "prisma": "6.16.2",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.8",
