--- a/.env.example
+++ b/.env.example
@@ -54,19 +54,17 @@ REALTIME_INTERNAL_ORIGIN=http://127.0.0.1:3000
 # Keep NEXTAUTH_URL and NEXT_PUBLIC_BASE_URL identical and without trailing slash.
 
 # Development deployment (devtheater.beegreenx.de)
-DEV_SOCKET_HOST=devsocket.beegreenx.de
 NEXTAUTH_URL=https://devtheater.beegreenx.de
 NEXT_PUBLIC_BASE_URL=https://devtheater.beegreenx.de
-NEXT_PUBLIC_REALTIME_URL=https://devsocket.beegreenx.de/realtime
-REALTIME_SERVER_URL=https://devsocket.beegreenx.de/realtime
+#NEXT_PUBLIC_REALTIME_URL=https://devtheater.beegreenx.de/realtime
+#REALTIME_SERVER_URL=https://devtheater.beegreenx.de/realtime
 CORS_ORIGIN=https://devtheater.beegreenx.de
 #REALTIME_CORS_ORIGIN=https://devtheater.beegreenx.de
 
 # Production deployment (prodtheater.beegreenx.de)
-#PROD_SOCKET_HOST=prodsocket.beegreenx.de
 #NEXTAUTH_URL=https://prodtheater.beegreenx.de
 #NEXT_PUBLIC_BASE_URL=https://prodtheater.beegreenx.de
-#NEXT_PUBLIC_REALTIME_URL=https://prodsocket.beegreenx.de/realtime
-#REALTIME_SERVER_URL=https://prodsocket.beegreenx.de/realtime
+#NEXT_PUBLIC_REALTIME_URL=https://prodtheater.beegreenx.de/realtime
+#REALTIME_SERVER_URL=https://prodtheater.beegreenx.de/realtime
 #CORS_ORIGIN=https://prodtheater.beegreenx.de
 #REALTIME_CORS_ORIGIN=https://prodtheater.beegreenx.de
