--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "node -e \"if(!process.env.SKIP_PRISMA_POSTINSTALL){require('child_process').execSync('pnpm prisma:generate',{stdio:'inherit'})}\"",
     "start": "next start",
     "start:combined": "node scripts/start-combined-server.mjs",
+    "start:proxy": "node scripts/start-with-proxy.mjs",
     "lint": "eslint",
     "test": "vitest run",
     "prisma:generate": "prisma generate",
@@ -22,8 +23,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "6.16.2",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.5.3",
     "@react-email/render": "^1.2.3",
     "@sendgrid/mail": "^8.1.6",
@@ -32,12 +33,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "http-proxy": "^1.18.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.9.12",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "prisma": "6.16.2",
     "react": "19.1.0",
     "react-big-calendar": "^1.14.0",
     "react-dom": "19.1.0",
@@ -49,14 +52,13 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
-    "zod": "^4.1.8",
-    "prisma": "6.16.2"
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
     "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.16.0",
