Configure auto-deploy Traefik routing

--- a/.env.example
+++ b/.env.example
@@ -94,8 +94,10 @@ CORS_ORIGIN=https://devtheater.beegreenx.de
 #AUTO_DEPLOY_TARGET_BRANCH=main
 #AUTO_DEPLOY_ENV=prod
 #AUTO_DEPLOY_SERVICE_NAME=app-prod
-#AUTO_DEPLOY_COMPOSE_FILE=/opt/worktree/docker-compose.hosting.yml
 #AUTO_DEPLOY_PROJECT_NAME=theater
 #AUTO_DEPLOY_LISTEN_PORT=3000
 #AUTO_DEPLOY_WEBHOOK_PORT=9000
 #AUTO_DEPLOY_WEBHOOK_PATH=/webhook
+#AUTO_DEPLOY_HOST=autodeploy.example.com
+#AUTO_DEPLOY_TRAEFIK_ENTRYPOINTS=websecure
+#AUTO_DEPLOY_TRAEFIK_CERT_RESOLVER=myresolver
