Route auto-deploy webhook through internal proxy

--- a/.env.example
+++ b/.env.example
@@ -96,8 +96,6 @@ CORS_ORIGIN=https://devtheater.beegreenx.de
 #AUTO_DEPLOY_SERVICE_NAME=app-prod
 #AUTO_DEPLOY_PROJECT_NAME=theater
 #AUTO_DEPLOY_LISTEN_PORT=3000
-#AUTO_DEPLOY_WEBHOOK_PORT=9000
 #AUTO_DEPLOY_WEBHOOK_PATH=/webhook
-#AUTO_DEPLOY_HOST=autodeploy.example.com
-#AUTO_DEPLOY_TRAEFIK_ENTRYPOINTS=websecure
-#AUTO_DEPLOY_TRAEFIK_CERT_RESOLVER=myresolver
+#AUTO_DEPLOY_CONTAINER_NAME=theater-autodeploy
+#AUTO_DEPLOY_INTERNAL_URL=http://theater-autodeploy:3000
