--- a/docker-compose.hosting.yml
+++ b/docker-compose.hosting.yml
@@ -69,6 +69,8 @@ services:
       REALTIME_HANDSHAKE_SECRET: ${DEV_REALTIME_HANDSHAKE_SECRET:-${DEV_REALTIME_AUTH_TOKEN}}
       EMAIL_SERVER: ${DEV_EMAIL_SERVER:-}
       EMAIL_FROM: ${DEV_EMAIL_FROM:-noreply@example.com}
+      DEPLOY_WEBHOOK_TARGET_URL: ${AUTO_DEPLOY_INTERNAL_URL:-}
+      DEPLOY_WEBHOOK_PATH: ${AUTO_DEPLOY_WEBHOOK_PATH:-/webhook}
     networks:
       - internal
       - proxy
@@ -108,6 +110,8 @@ services:
       REALTIME_HANDSHAKE_SECRET: ${PROD_REALTIME_HANDSHAKE_SECRET:-${PROD_REALTIME_AUTH_TOKEN}}
       EMAIL_SERVER: ${PROD_EMAIL_SERVER:-}
       EMAIL_FROM: ${PROD_EMAIL_FROM:-noreply@example.com}
+      DEPLOY_WEBHOOK_TARGET_URL: ${AUTO_DEPLOY_INTERNAL_URL:-}
+      DEPLOY_WEBHOOK_PATH: ${AUTO_DEPLOY_WEBHOOK_PATH:-/webhook}
     networks:
       - internal
       - proxy
