Add Postgres service to auto-deploy compose

--- a/.env.example
+++ b/.env.example
@@ -95,6 +95,10 @@ CORS_ORIGIN=https://devtheater.beegreenx.de
 #AUTO_DEPLOY_ENV=prod
 #AUTO_DEPLOY_SERVICE_NAME=app-prod
 #AUTO_DEPLOY_PROJECT_NAME=theater
+#POSTGRES_USER=postgres
+#POSTGRES_PASSWORD=postgres
+#AUTO_DEPLOY_PGDATA_VOLUME=auto-deploy-pgdata
+#AUTO_DEPLOY_INTERNAL_NETWORK=auto-deploy-internal
 #AUTO_DEPLOY_LISTEN_PORT=3000
 #AUTO_DEPLOY_WEBHOOK_PATH=/webhook
 #AUTO_DEPLOY_CONTAINER_NAME=theater-autodeploy
